fix alignment of blob and add social meta data

--- a/src/elements/Blob/Blob.module.css
+++ b/src/elements/Blob/Blob.module.css
@@ -2,8 +2,8 @@
   position: absolute;
   height: 90%;
   z-index: -5;
-  left: -50%;
-  top: 5%;
+  left: -40%;
+  top: 10%;
 }
 
 .Blob-works {
